# rust-githubaction-demo

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: release-plz.yml  rust-crate-publisher.yml  template.yml
examples/: main.rs
src/: lib.rs
tests/: a.rs
