[package]
name = "rust-githubaction-demo"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "This package is used for test publishing a crate with github actions"
homepage = "https://github.com/pakho12/rust-githubaction-demo"
repository = "https://github.com/pakho12/rust-githubaction-demo"
readme = "README.md"

[dependencies]
